# mobius

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  rust_out
.github/workflows/: release.yml
scripts/: bash_autocomplete.bash  pwsh_autocomplete.ps1  zsh_autocomplete.zsh
src/: lib.rs  main.rs  model.rs  utils.rs
src/args_parser/: mod.rs  sub_parsers.rs
src/command/: mod.rs
src/config/: mod.rs
src/llm/: gemini.rs  internal.rs  mod.rs  openai.rs  tools.rs
src/llm/tools/: local_env.rs  mod.rs
src/thread/: mod.rs
src/utils/: local_env.rs
tests/: Dockerfile
