[package]
name = "mobius"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
simple_logger = "5.2.0"
toml = "0.9.12"
log = "0.4.29"
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"
rig-core = "0.33.0"
serde_json = "1.0.149"
anyhow = "1.0.102"

[profile.dev]
split-debuginfo = "packed"

[dev-dependencies]
rand = "0.9.2"
